--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -18,20 +18,16 @@ jobs:
         POSTGRESQL_DATABASE: apisolid
 
   steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v3
       with:
         node-version: "18"
         cache: "npm"
 
-    - name: Install Dependencies
-      run: npm ci
+    - run: npm ci
 
-    - name: Run E2E Tests
-      run: npm run test:e2e
+    - run: npm run test:e2e
       env:
         JWT_SECRET: secret-for-testing
         DATABASE_URL_NEW: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
